--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/nova": "4.34.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
         "laravel/pail": "^1.1",
