--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# As running `composer nova-user`, belows are required to make default account for nova
+# NOVA_NAME="admin"
+# NOVA_EMAIL="admin@example.com"
+# NOVA_PASSWORD="password"
