--- a/.env.github
+++ b/.env.github
@@ -1,7 +1,7 @@
 APP_NAME=aipro
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:XB/udGjwqvg2kq+ovu+/FnAsFVNkbpdwGvxEy/PN/qg=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
