--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
+        "barryvdh/laravel-ide-helper": "^3.2",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
         "laravel/pail": "^1.1",
@@ -75,7 +76,8 @@
         "log": "tail -f ./storage/logs/laravel.log",
         "migrate": [
             "@php artisan migrate:fresh --seed"
-        ]
+        ],
+        "nova-user": "@php artisan aipro:create-nova-account"
     },
     "extra": {
         "laravel": {
