--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
         "barryvdh/laravel-ide-helper": "^3.2",
+        "cable8mm/xeed": "^1.5",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
         "laravel/pail": "^1.1",
@@ -75,7 +76,7 @@
         ],
         "log": "tail -f ./storage/logs/laravel.log",
         "migrate": [
-            "@php artisan migrate:fresh --seed"
+            "@php artisan migrate:fresh"
         ],
         "nova-user": "@php artisan aipro:create-nova-account"
     },
