--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laracraft-tech/laravel-useful-additions": "^4.0",
         "laravel/framework": "^11.31",
+        "laravel/nova": "4.34.3",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0",
-        "laravel/nova": "4.34.3"
+        "livewire/volt": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
@@ -25,6 +26,7 @@
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
+        "mbezhanov/faker-provider-collection": "^2.0",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.5",
