--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=ko
+APP_FALLBACK_LOCALE=ko
+APP_FAKER_LOCALE=ko_KR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
