Set user timezone then default is `Asia/Seoul`

--- a/.env.github
+++ b/.env.github
@@ -2,7 +2,7 @@ APP_NAME=aipro
 APP_ENV=production
 APP_KEY=base64:XB/udGjwqvg2kq+ovu+/FnAsFVNkbpdwGvxEy/PN/qg=
 APP_DEBUG=false
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Seoul
 APP_URL=http://localhost
 
 APP_LOCALE=ko
