Install `dedoc/scramble` package

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.3",
         "cable8mm/enum-getter": "^1.0",
+        "dedoc/scramble": "^0.11.33",
         "laracraft-tech/laravel-useful-additions": "^4.0",
         "laravel-lang/common": "^6.4",
         "laravel/framework": "^11.31",
@@ -97,6 +98,7 @@
         "barryvdh/laravel-debugbar": "Enables XDebug integration in Laravel applications.",
         "barryvdh/laravel-ide-helper": "Provides IDE helper classes for Laravel applications.",
         "cable8mm/xeed": "Provides Laravel resources like models, migrations, seeds, factories and Nova resources.",
+        "dedoc/scramble": "Provides API Documents",
         "fakerphp/faker": "Generates fake data for testing and seeding your application.",
         "laravel/breeze": "Laravel Breeze provides a ready-to-use starting point for building robust Laravel applications.",
         "laracraft-tech/laravel-useful-additions": "Provides Traits to do getters essentially for enum and db:truncate command",
