--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
+        "outl1ne/nova-input-filter": "^2.0",
         "outl1ne/nova-multiselect-filter": "^4.0",
         "picqer/php-barcode-generator": "^3.2"
     },
@@ -110,6 +111,7 @@
         "laravel/pint": "Pint is a PHP static analysis tool that finds common mistakes in your Laravel application.",
         "laravel/sail": "Laravel Sail provides a pre-configured Docker environment for local development.",
         "mbezhanov/faker-provider-collection": "Adds custom Faker providers for Laravel applications.",
+        "outl1ne/nova-input-filter": "Provides Laravel Nova filter for matching the exactly value with text input element.",
         "outl1ne/nova-multiselect-filter": "Provides Laravel Nova filter for Multiselect field.",
         "picqer/php-barcode-generator": "Required to generate a barcode"
     },
