--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "require": {
         "php": "^8.3",
         "cable8mm/enum-getter": "^1.0",
+        "cable8mm/good-code": "^2.0",
+        "cable8mm/laravel-validation-kisa-rules": "^1.0",
         "dedoc/scramble": "^0.11.33",
         "laracraft-tech/laravel-useful-additions": "^4.0",
         "laravel-lang/common": "^6.4",
@@ -20,6 +22,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
+        "outl1ne/nova-input-filter": "^2.0",
         "outl1ne/nova-multiselect-filter": "^4.0",
         "picqer/php-barcode-generator": "^3.2"
     },
@@ -97,6 +100,8 @@
     "suggest": {
         "barryvdh/laravel-debugbar": "Enables XDebug integration in Laravel applications.",
         "barryvdh/laravel-ide-helper": "Provides IDE helper classes for Laravel applications.",
+        "cable8mm/good-code": "Provides various apis for good code and performance.",
+        "cable8mm/laravel-validation-kisa-rules": "Provides Laravel validation rules for Korean.",
         "cable8mm/xeed": "Provides Laravel resources like models, migrations, seeds, factories and Nova resources.",
         "dedoc/scramble": "Provides API Documents",
         "fakerphp/faker": "Generates fake data for testing and seeding your application.",
@@ -106,6 +111,7 @@
         "laravel/pint": "Pint is a PHP static analysis tool that finds common mistakes in your Laravel application.",
         "laravel/sail": "Laravel Sail provides a pre-configured Docker environment for local development.",
         "mbezhanov/faker-provider-collection": "Adds custom Faker providers for Laravel applications.",
+        "outl1ne/nova-input-filter": "Provides Laravel Nova filter for matching the exactly value with text input element.",
         "outl1ne/nova-multiselect-filter": "Provides Laravel Nova filter for Multiselect field.",
         "picqer/php-barcode-generator": "Required to generate a barcode"
     },
