--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "dedoc/scramble": "^0.11.33",
         "laracraft-tech/laravel-useful-additions": "^4.0",
         "laravel-lang/common": "^6.4",
-        "laravel/framework": "^11.31",
+        "laravel/framework": "11.41.0",
         "laravel/nova": "4.34.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
@@ -92,7 +92,8 @@
         "migrate": [
             "@php artisan migrate:fresh --seed --force"
         ],
-        "nova-user": "@php artisan aipro:create-nova-account"
+        "nova-user": "@php artisan aipro:create-nova-account",
+        "queue": "@php artisan queue:work --queue=high,default"
     },
     "extra": {
         "laravel": {
