--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cable8mm/enum-getter": "^1.0",
         "cable8mm/good-code": "^2.0",
         "cable8mm/laravel-validation-kisa-rules": "^1.0",
+        "cable8mm/n-format": "^1.3",
         "cable8mm/waybill": "^1.0",
         "carlos-meneses/laravel-mpdf": "^2.1",
         "dedoc/scramble": "^0.11.33",
@@ -45,8 +46,7 @@
         "mbezhanov/faker-provider-collection": "^2.0",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "pestphp/pest": "^3.5",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
         "psr-4": {
@@ -125,7 +125,8 @@
         "carlos-meneses/laravel-mpdf": "Required to generate PDF files for waybills and barcode",
         "cable8mm/order-sheet": "Provides making `order-sheet` excel files",
         "cable8mm/waybill": "Provides a waybill pdf for making seeders",
-        "jeffbeltran/sanctum-tokens": "Create a sanctum personal access tokens in Nova"
+        "jeffbeltran/sanctum-tokens": "Create a sanctum personal access tokens in Nova",
+        "cable8mm/n-format": "Provides functions for formatting numbers, currencies and prices"
     },
     "config": {
         "optimize-autoloader": true,
