--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_URL=http://localhost
 APP_LOCALE=ko
 APP_FALLBACK_LOCALE=ko
 APP_FAKER_LOCALE=ko_KR
+APP_CURRENCY=KRW
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
